--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             </div>
         </nav>
         <div class="intro">
+            <div class="rectangle-1"></div>
+            <div class="rectangle-2"></div>
+            <div class="rectangle-3"></div>
+            <div class="rectangle-4"></div>
             <img src="pics/Unknwnv1.png" alt="" class="unknwn"></img>
             </div>
     </header>
@@ -114,7 +118,7 @@
             </div>
             <div class="inf-contact">
                 <h1 class="inf-zag-text">You can always send us</br> email anytime you want to</br>
-                    contact@unknwn.tech ⎘ </h1>
+                    <a style="text-decoration:underline; cursor: pointer;">contact@unknwn.tech ⎘</a> </h1>
                     <p class="inf-subtext">Or you can receive a letter from us if you prefer a slow but elegant way of communication. A custom postcard will be included in response mail. Just leave us your address with a ZIP-code in the form on the left, and wait for a letter! </p>
             </div>
         </div>
