--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             </div>
         </nav>
         <div class="intro">
-            <img src="pics/Unknwnv1.png" alt="" class="unknwn"></img>
-            </div>
+            <div class="unknwn">unknwn</div>
     </header>
     <section class="about-us">
         <div class="container">
@@ -122,7 +121,18 @@
     </section>
     <section class="footer">
         <div class="end">
-            <img src="/pics/Unknwn.svg" alt="" class="unknwn">
+            <div class="unknwn-end">unknwn</div>
+            <div class="stroke">
+                <p class="mark">goddamn NDA</p>
+                <p class="mark">sugarfree</p>
+                <p class="mark">webgl</p>
+                <p class="mark">style</p>
+                <p class="mark">awesome works</p>
+                <p class="mark">single page applications</p>
+                <p class="mark">unknwn</p>
+                <p class="mark">mobile applications</p>
+                <p class="mark">blockchain and fintech</p>
+            </div>
         </div>
         <nav class="nav-end">
             <div class="end-menu">
