--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <a href="#" class="link">contacts</a>
             </div>
         </nav>
-        <div class="intro">
-                <h1 class="unknwn">unknwn</h1>
-                <h2 class="n-chance">no chance against us</h2>
+        <div class="intro"> 
+            <h1 class="unknwn"> UNKNWN </h1>
+            <h2 class="n-chance">no chance against us</h2>
             <div class="block-1">
                 <div class="line-1-2">
                     <div class="line-2-1"></div>
@@ -30,8 +30,10 @@
                     <div class="line-2-1"></div>
                 </div>
             </div>
-            </div>
+          </div>
     </header>
+    
+    
     <section class="about-us">
         <div class="container">
                 <p class="about-us-text">
