--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </nav>
         <div class="intro"> 
-            <h1 class="unknwn"> UNKNWN </h1>
+            <h1 class="unknwn">UNKNWN</h1>
             <h2 class="n-chance">no chance against us</h2>
             <div class="block-1">
                 <div class="line-1-2">
@@ -156,7 +156,7 @@
     </section>
     <section class="footer">
         <div class="end">
-            <div class="unknwn-end">unknwn</div>
+            <div class="unknwn-end">UNKNWN</div>
             <div class="stroke">
                 <p class="mark">goddamn NDA</p>
                 <p class="mark">sugarfree</p>
