--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="container">
                 <p class="about-us-text">
                     At unknwn, we perform high-end IT and digital solutions by using neoteric development approaches and user-oriented designs.</br></br>
-        We do <span class="color">single page applications,  website construction, hard ware integrations, mobile applications, cross-platform apps</span> and things you even about Unknwn
+        We do <span class="color">single page applications,  website construction, hard ware integrations, mobile applications, cross-platform apps</span> and things you even about
+        <span class="unk1">Unknwn</span>
                 </p>
         </div>
     </section>
@@ -77,14 +78,17 @@
             </div>
         </div>
         <div class="container">
-            <p class="cases-text-end">AND MANY MORE</br> PROJECTS UNDER</br> GODDAMN NDA</p>
+            <p class="cases-text-end">AND MANY MORE</br> PROJECTS UNDER</br> <span class="goddamn">GODDAMN</span> NDA</p>
         </div>
     </section>
     <section class="unknwn-team">
         <div class="container">
             <h1 class="team-logo">unknwn</h1>
+        </div>
+        <div class="line"></div>
+        <div class="container">
         <h2 class="team-text">
-            Every project unknwn deliver is the outcome</br> of our team’s collaboration. Over the years we came</br> to a paradigm that every business has to be digitalised, no matter if it’s a local or global.
+            Every project <span class="unk1">unknwn</span> deliver is the outcome</br> of our team’s collaboration. Over the years we came</br> to a paradigm that every business has to be digitalised, no matter if it’s a local or global.
         </h2>
         </div>
         <div class="top-container">
@@ -141,9 +145,9 @@
                     <button class="chose-problem">Other</button>
                     </div>
                     <p class="main-contact">Your contact info</p>
-                    <input class="input-em" type="email" id="email" pattern=".+@globex.com" value="Your email, phone, ZIP-code or other contact info">
+                    <input class="input-em" type="email" id="email" pattern=".+@globex.com" placeholder="Your email, phone, ZIP-code or other contact info">
                     <p class="main-contact">Message</p>
-                    <textarea class="input-text">Please, tell us anything about your project!</textarea>
+                    <textarea class="input-text" placeholder="Please, tell us anything about your project!"></textarea>
             <button class="send-req">Send request</button>
             </div>
             <div class="inf-contact">
