--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
             </div>
         </div>
         <div class="container">
-            <p class="cases-text-end">AND MANY MORE</br> PROJECTS UNDER</br> <span class="goddamn">GODDAMN</span> NDA</p>
-        </div>
+            <p class="cases-text-end">
+                AND MANY MORE</br> PROJECTS UNDER</br> <span class="goddamn">
+                    <svg class="svg-item" width="235" height="48" viewBox="0 0 235 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.525672 4.857C3.25336 3.03974 39.6226 -2.41185 45.9872 1.22257C52.3518 4.857 224.196 1.82835 230.561 4.857C236.926 7.88565 236.016 47.2587 230.561 47.2587C219.65 40.5955 79.6287 50.893 45.9872 43.6242C40.5318 43.0184 3.25351 50.2872 0.525672 47.2587C6.89027 33.3265 -2.20202 6.67425 0.525672 4.857Z" fill="#0047FF" fill-opacity="0.97"/>
+                        </svg>
+                    GODDAMN</span> NDA</p>
+        </div>        
     </section>
     <section class="unknwn-team">
         <div class="container">
