--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <header class="header">
         <nav class="nav">
             <div class="logo">unknwn</div>
+
+
+            <div id="menu">
+                <transition name="menu-on" mode="out-in">
+                    <button class="btn-menu" v-if="!show" @click="show = !show"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z"/></svg> </button>
+                  <button class="btn-menu" v-else @click="show = !show"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24"><path d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"/></svg> </button>
+                </transition>
+                  <transition name="menu">
+                    <div class="mob-menu-on" v-if="show">
+                      <a href="#" class="mobile-menu" v-for="item in items">{{ item }}</a>
+                    </div>
+                  </transition>
+                    
+                </div>
+
+
             <div class="menu-nav">
                 <a href="#" class="link">about</a>
                 <a href="#" class="link">cases</a>
@@ -195,5 +211,7 @@
 
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
